# rust-todo

./: .env.dist  docker-compose.yml
backend/: Cargo.toml
backend/db/: main.sql
backend/migrations/2021-08-08-212458_create_category/: up.sql
backend/migrations/2021-08-08-213359_create_task/: up.sql
backend/src/: main.rs  route.rs  schema.rs
backend/src/app/: app.rs  cache.rs  config.rs  db.rs  mod.rs  models.rs  repository.rs
backend/src/handlers/: cache.rs  category.rs  category_handler.rs  handler.rs  mod.rs
backend/src/handlers/category/: mod.rs
backend/src/models/: category_model.rs  mod.rs  model.rs  posts.rs  schema.rs  task_model.rs
backend/src/services/: mod.rs
backend/src/services/echo/: mod.rs
backend/src/services/healthcheck/: mod.rs
docker/backend/: Dockerfile  entrypoint
