[package]
name = "todo"
version = "0.1.0"
authors = ["Nix"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
env_logger = "0.8"
log = "0.4"
hyper = { version = "0.14", features = ["full"] }
tokio = { version = "1", features = ["full"] }
futures = "0.3"
route-recognizer = "0.3"
serde = { version = "1.0", features = ["derive"]}
serde_json = "1.0"
url = "2.1"
mysql_async = "0.27"
diesel = { version = "1.4.4", features = ["mysql"] }
dotenv = "0.15.0"
